--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 }
 body{
     overflow-x: hidden;
+    background: #5f5f5f;
 }
 .navigation{
     position: absolute;
@@ -83,6 +84,10 @@ body{
     position: relative;
     left: 0px;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 100px;
+    align-items: center ;
     min-height: 100vh;
     transition: 1s;
 }
@@ -95,11 +100,12 @@ header{
     top: 0%;
     left: 0%;
     width: 100%;
-    padding: 40px 100px;
+    padding: 20px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: .5s;
+    background: #fff;
 }
 .toggle{
     position: relative;
@@ -163,6 +169,79 @@ header{
     letter-spacing: 2;
 }
 .btn:hover{
-    background: #15ff93;
+    background: #00a05e;
     border-radius: 5px;
+}
+/* ================================================= */
+.sec .imgbox{
+    position: relative;
+    min-width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.sec .home-content{
+    max-width: 700px;
+    margin-left: 40px;
+}
+.sec .home-content h2{
+    font-weight: 500;
+    letter-spacing: 1px;
+    color: rgb(255, 255, 255);
+    font-family: 'Roboto Slab', serif;
+}
+.sec .home-content h2 span{
+    font-weight: 700;
+    color: #00a05e;
+    font-size: 50px;
+    font-family: 'Josefin Slab', serif;
+}
+.typejs-title{
+    font-size: 30px; color: #fff; font-family: 'Roboto Slab', serif;
+}
+#type_2{
+    font-size: 35px; color: #00a05e; font-size: 40px; font-family: 'Josefin Slab', serif; text-transform: uppercase;
+}
+
+.typed-cursor{
+    display: none;
+}
+.sec .home-content p{
+    color: #fff;
+    font-size: 20px;
+    margin: 20px 0px;
+}
+.home-content .btn{
+    background: rgb(36, 36, 36);
+}
+.home-content .btn:hover{
+    background: #00a05e;
+    border-radius: 5px;
+}
+footer{
+    position: absolute;
+    bottom: 20px;
+    left: 0px;
+    padding: 20px 100px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer-icon{
+    position: absolute;
+    display: flex;
+    align-items: center;
+}
+.footer-icon li{
+    list-style: none;
+}
+.footer-icon li a{
+    position: relative;
+    margin-right: 10px;
+    display: inline-block;
+    transform: scale(0.75);
+    font-size: 30px;
+    color: #fff;
 }
